@startuml img_source

title Kép forrás

class ImageSource {
    original: Mat
    cached: CachedImage
    amount: int
    filters: [Filter]
    
    rotated: bool
    width: double
    height: double
    
    add_filter(filter: Filter)
    clear_filters()
    apply_filters()
    get_img(): Mat
}

interface Filter {
    apply(img: Mat): Mat
}
ImageSource *-- Filter


class Mask {
    mask: Mat
    apply(img: Mat): Mat 
}
Filter <|-- Mask

class Size {
    width: int
    height: int
    apply(img: Mat): Mat
}
Filter <|-- Size

class Padding {
    padding: int
    apply(img: Mat): Mat
}
Filter <|-- Padding

class Rotate {
    rotate: bool
    apply(Mat img): Mat
}
Filter <|-- Rotate

class Tile {
    image: ImageSource
    corner: Point
    width: int
    height: int
    rotated: bool

    rotate()
}
ImageSource -* Tile

class CachedImage {
    source: ICachableImage
    cache: Mat
    dirty: bool
    regenerate()
}
CachedImage -* ImageSource


interface ICache {
    set_dirty()
}

interface ICachableImage {
    get_cachable(): Mat
}

ICache <|-- CachedImage
ICachableImage <|-- ImageSource

@enduml